--- a/index.html
+++ b/index.html
@@ -10,42 +10,22 @@
     <div ng-controller="MainCtrl">
       <h1>{{name}}</h1>
       <h2>{{message}} below</h2>
-      <div>
-        {{error}}
+      <div>{{error}}</div>
+      <hr />
+
+      <form ng-submit="search(username)">
+        <input
+          type="search"
+          required
+          placeholder="Username to find"
+          ng-model="username"
+        />
+        <input type="submit" value="Search" />
+      </form>
+
+      <div ng-include="'userdetails.html'" ng-show="user">
       </div>
-      <hr>
-
-<form ng-submit="search(username)">
-  <input type="search" required placeholder="Username to find" ng-model="username">
-  <input type="submit" value="Search" >
-</form>  
-
-    <div>
-      <h3>Username : {{user.name}}</h3>
-      <h3>Location : {{user.location}}</h3>
-      <p>Number of repositories {{user.public_repos}}</p>
-      <p>Number of followers {{user.followers}}</p>
-
     </div>
-
-      <table>
-        <thead>
-          <tr>
-            <th>Name</th>
-            <th>Stars</th>
-            <th>Language</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr ng-repeat="repo in repos">
-            <td>{{repo.name}}</td>
-            <td>{{repo.stargazers_count | number}}</td>
-            <td>{{repo.language}}</td>
-          </tr>
-        </tbody>
-      </table>
-
-   </div> 
   </body>
 </html>
-      <!-- <img ng-src="{{user.avatar_url}}" title="{{user.name}}"> -->
+<!-- <img ng-src="{{user.avatar_url}}" title="{{user.name}}"> -->
