--- a/userdetails.html
+++ b/userdetails.html
@@ -1,4 +1,4 @@
-<div>
+<div id="userDetails">
   <h3>Username : {{user.name}}</h3>
   <h3>Location : {{user.location}}</h3>
   <p>Number of repositories {{user.public_repos}}</p>
